--- a/popup.html
+++ b/popup.html
@@ -131,7 +131,7 @@
         display: flex;
         justify-content: space-between;
         padding: 10px 22px;
-		
+
       }
 
       .flex {
@@ -171,7 +171,9 @@
       </p>
     </div>
     <div class="modal-icons">
-	  <p align="left" padding-bottom="-50px">Compare to other popular services that collect data!</p>
+	  <p align="left" padding-bottom="-25px">Compare to other popular services that collect data!</p>
+  <!--<p align="left" padding-bottom="-25px">Here are the top keywords we found on the page:<script>getTopNWords();</script></p>-->
+
       <div class="flex-container">
         <div class="flex">
           <a href="https://www.youtube.com/static?template=terms" target="_blank">
@@ -196,7 +198,7 @@
 
       </div>
     </div>
-	
+
     <script src="popup.js">
 
     </script>
