--- a/popup.html
+++ b/popup.html
@@ -18,6 +18,7 @@
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script src="popup.js"></script>
     <script type="text/javascript" src="chrome-extension-async.js"></script>
+    <script src="highlight.js"></script>
 
     <style>
 
@@ -154,7 +155,6 @@
     </div>
     <div class="modal-icons">
 	  <p align-items ="left" padding-bottom="-25px">Compare to other popular services that collect data!</p>
-  <!--<p align="left" padding-bottom="-25px">Here are the top keywords we found on the page:<script>getTopNWords();</script></p>-->
 
       <div class="flex-container">
         <div class="flex">
