--- a/popup.html
+++ b/popup.html
@@ -136,15 +136,15 @@
     <div class="modal-header">
       <h1 class="logo">
         <img class="logo-icon" src="images/ouroboros.jpg" />Ouroboros
-        <span class="version">(1.0.1)</span>
+        <span class="version">(1.0.4)</span>
       </h1>
     </div>
     <div class="modal-content">
       <p>
-	    The tool to help you easily read through ToS pages!<br>
+	    The tool to help you easily read through ToS and PP pages!<br>
 	    <br><b>To begin:</b>
-		<br>1. Navigate to a <u>Terms of Service</u> page
-		<br>2. Click the begin button below to see top keywords to look out for!<br>
+		<br>1. Navigate to a <u>Terms of Service</u> or <u>Privacy Policy</u> page
+		<br>2. Click the begin button below to highlight keywords and see the top keywords<br>
       </p>
 	    <p class= "center-button">
 
