--- a/popup.html
+++ b/popup.html
@@ -55,8 +55,12 @@
         text-align: center;
 
       }
-      .center-button{
-        left:50%;
+      button{
+        margin: auto;
+        display: block;
+        width: 50%;
+        font-size 32px;
+
       }
       h1 {
         font-family: "Menlo", monospace;
@@ -146,12 +150,12 @@
 		<br>1. Navigate to a <u>Terms of Service</u> or <u>Privacy Policy</u> page
 		<br>2. Click the begin button below to highlight keywords and see the top keywords<br>
       </p>
-	    <p class= "center-button">
+	    <p class= "button" align="center" >
           <button value="Begin" id ="check-1" class="button">Begin</button>
         </p>
     </div>
     <div class="modal-icons">
-	  <p align-items ="left" padding-bottom="-25px">Compare to other popular services that collect data!</p>
+	  <p align-items ="left" padding-bottom="-25px">Below are a few links to other Policy pages. Check them out and try our service!</p>
       <div class="flex-container">
         <div class="flex">
           <a href="https://www.youtube.com/static?template=terms" target="_blank">
